// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appReducer handle the create token action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "user": false,
  "validateToken": true,
}
`;

exports[`appReducer handle the create token error action 1`] = `
Immutable.Map {
  "loading": false,
  "error": [Error: Test error],
  "user": false,
  "validateToken": true,
}
`;

exports[`appReducer handle the create token success action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "user": false,
  "validateToken": true,
}
`;

exports[`appReducer handle the delete token action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "user": false,
  "validateToken": true,
}
`;

exports[`appReducer handle the load user action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "user": false,
  "validateToken": false,
}
`;

exports[`appReducer handle the load user error action 1`] = `
Immutable.Map {
  "loading": false,
  "error": [Error: Test error],
  "user": false,
  "validateToken": true,
}
`;

exports[`appReducer handle the load user success action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "user": Immutable.Map {},
  "validateToken": true,
}
`;

exports[`appReducer returns the initial state 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "user": false,
  "validateToken": true,
}
`;
